[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pnnl-psl"
authors = [
    { name = "Aaron Tuor", email = "aaron.tuor@pnnl.gov" },
    { name = "Jan Drgona", email = "jan.drgona@pnnl.gov" },
    { name = "Elliot Skomski", email = "elliot.skomski@pnnl.gov" },
    { name = "Soumya Vasisht", email = "soumya.vasisht@pnnl.gov" },
]
description = "Dynamic Systems Library in Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["gym", "numpy", "scipy", "matplotlib", "pyts", "tqdm", "pandas"]
dynamic = ["version"]

[project.urls]
homepage = "https://pnnl.github.io/psl/"
documentation = "https://pnnl.github.io/psl/"
repository = "https://github.com/pnnl/psl"


[tool.setuptools]
packages = ["pnnl_psl"]

[tool.setuptools.dynamic]
version = { attr = "pnnl_psl.__version__" }

[tool.setuptools.package-data]
psl = ["pnnl_psl/parameters/buildings/*"]

[project.scripts]
pnnl_psl = "pnnl_psl.cli:cli"

[project.optional-dependencies]
test = ["ipython"]
